# AMOS-Autonomous-Manufacturing-OS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  push-to-github.sh
.github/workflows/: ci.yaml  ci.yml
ai-engine/inference/: Dockerfile  onnx_runner.py  stream_processor.py
ai-engine/models/: requirements.txt
ai-engine/training/: Dockerfile  export_onnx.py  train_autoencoder.py
cloud-core/: docker-compose.yml
cloud-core/alert-service/: requirements.txt
cloud-core/alert-service/app/: main.py
cloud-core/grafana/dashboards/: dashboard.yaml
cloud-core/grafana/datasources/: influxdb.yaml
cloud-core/ingestion-service/: requirements.txt
cloud-core/ingestion-service/app/: main.py
cloud-core/mlops-service/: Dockerfile  requirements.txt
cloud-core/mlops-service/app/: main.py
cloud-core/tsdb-service/: requirements.txt
cloud-core/tsdb-service/app/: main.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: AlertBadge.tsx  HealthCard.tsx  Sidebar.tsx  StatusDot.tsx
docs/: api-reference.md  architecture.md  deployment.md
edge-agent/: Cargo.toml  Dockerfile
edge-agent/config/: edge-config.yaml
edge-agent/src/: config.rs  health.rs  inference.rs  main.rs  mqtt.rs
edge-agent/src/collectors/: mod.rs  modbus.rs  opcua.rs
infrastructure/k8s/: alert-service.yaml  configmap.yaml  influxdb.yaml  ingestion-service-svc.yaml  ingestion-service.yaml  kafka.yaml  mlops-deployment.yaml  namespace.yaml  tsdb-service.yaml  zookeeper.yaml
scripts/: create_init_files.py
(+7 files in other folders)
